--- a/index.html
+++ b/index.html
@@ -9,18 +9,29 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <header>
+    <header class="header">
+        <div class="header__box-logo">
+            <img src="images/logo/ohmyfood.png" alt="Logo ohmyfood" class="logo--size">
+        </div>
+        <div class="header__box-location">
+            <span class="location--flex text-font">
+                <i class="fas fa-map-marker-alt"></i>
+                Paris, Belleville
+            </span>
+        </div>
     </header>
 
     <main>
-        <p>Ceci est une page de base.</p>
+        <section>
+            <h1>Réservez le menu qui vous convient</h1>
+        </section>
     </main>
 
     <footer>
-        <p>Footer</p>
     </footer>
 </body>
 </html>
