ajout bouton et title index + css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img src="images/logo/ohmyfood.png" alt="Logo ohmyfood" class="logo--size">
         </div>
         <div class="header__box-location">
-            <span class="location--flex text-font">
+            <span class="location--flex roboto">
                 <i class="fas fa-map-marker-alt"></i>
                 Paris, Belleville
             </span>
@@ -26,8 +26,12 @@
     </header>
 
     <main>
-        <section>
-            <h1>Réservez le menu qui vous convient</h1>
+        <section class="reservation">
+            <h1 class="reservation__title roboto">Réservez le menu qui vous convient</h1>
+            <span class="reservation__subtitle roboto">Découvrez des restaurants d'exception, sélectionnés par nos soins.</span>
+            <div class="btn">
+                <a href="#" class="btn btn-gradient btn-font">Explorer nos restaurants</a>
+            </div>
         </section>
     </main>
 
