ajout partie Fonctionnement

--- a/index.html
+++ b/index.html
@@ -29,8 +29,27 @@
         <section class="reservation">
             <h1 class="reservation__title roboto">Réservez le menu qui vous convient</h1>
             <span class="reservation__subtitle roboto">Découvrez des restaurants d'exception, sélectionnés par nos soins.</span>
-            <div class="btn">
-                <a href="#" class="btn btn-gradient btn-font">Explorer nos restaurants</a>
+            <div class="btn-center">
+                <a href="#" class="btn-reservation btn-gradient btn-font btn-rounded">Explorer nos restaurants</a>
+            </div>
+        </section>
+        
+        <section class="fonctionnement">
+                <h2 class="fonctionnement__title roboto">Fonctionnement</h2>
+            <div class="btn-fonctionnement btn-font btn-rectangle">
+                <div class="btn-ordre btn-rounded">1</div>
+                <i class="fas fa-mobile-alt icon-grey fa-lg"></i>
+                <span>Choisissez un restaurant</span>
+            </div>
+            <div class="btn-fonctionnement btn-font btn-rectangle">
+                <div class="btn-ordre btn-rounded">2</div>
+                <i class="fas fa-list icon-grey fa-lg"></i>
+                <span>Composez votre menu</span>
+            </div>
+            <div class="btn-fonctionnement btn-font btn-rectangle">
+                <div class="btn-ordre btn-rounded">3</div>
+                <i class="fas fa-store icon-purple fa-lg"></i>
+                <span>Dégustez au restaurant</span>
             </div>
         </section>
     </main>
