--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img src="images/logo/ohmyfood.png" alt="Logo ohmyfood" class="logo--size">
         </div>
         <div class="header__box-location">
-            <span class="location--flex roboto">
+            <span class="location--flex">
                 <i class="fas fa-map-marker-alt"></i>
                 Paris, Belleville
             </span>
@@ -27,15 +27,15 @@
 
     <main>
         <section class="reservation">
-            <h1 class="reservation__title roboto">Réservez le menu qui vous convient</h1>
-            <span class="reservation__subtitle roboto">Découvrez des restaurants d'exception, sélectionnés par nos soins.</span>
+            <h1 class="reservation__title">Réservez le menu qui vous convient</h1>
+            <span class="reservation__subtitle">Découvrez des restaurants d'exception, sélectionnés par nos soins.</span>
             <div class="btn-center">
                 <a href="#" class="btn-reservation btn-gradient btn-font btn-rounded">Explorer nos restaurants</a>
             </div>
         </section>
         
         <section class="fonctionnement">
-                <h2 class="fonctionnement__title roboto">Fonctionnement</h2>
+            <h2 class="fonctionnement__title">Fonctionnement</h2>
             <div class="btn-fonctionnement btn-font btn-rectangle">
                 <div class="btn-ordre btn-rounded">1</div>
                 <i class="fas fa-mobile-alt icon-grey fa-lg"></i>
@@ -51,6 +51,49 @@
                 <i class="fas fa-store icon-purple fa-lg"></i>
                 <span>Dégustez au restaurant</span>
             </div>
+        </section>
+        <section class="restaurants">
+            <h3 class="restaurants__title">Restaurants</h3>
+            <article class="card">
+                <img class="card__img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo d'une assiette d'un restaurant">
+                <div class="card__content">
+                    <span>
+                        <p class="card__title">La palette du goût</p>
+                        <p class="card__subtitle">Ménilmontant</p>
+                    </span>
+                    <i class="far fa-heart fa-xl icone-weight"></i>
+                </div>
+            </article>
+            <article class="card">
+                <img class="card__img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo d'une assiette d'un restaurant">
+                <div class="card__content">
+                    <span>
+                        <p class="card__title">La note enchantée</p>
+                        <p class="card__subtitle">Charonne</p>
+                    </span>
+                    <i class="far fa-heart fa-xl icone-weight"></i>
+                </div>
+            </article>
+            <article class="card">
+                <img class="card__img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'une assiette d'un restaurant">
+                <div class="card__content">
+                    <span>
+                        <p class="card__title">À la française</p>
+                        <p class="card__subtitle">Cité Rouge</p>
+                    </span>
+                    <i class="far fa-heart fa-xl icone-weight"></i>
+                </div>
+            </article>
+            <article class="card">
+                <img class="card__img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo d'une assiette d'un restaurant">
+                <div class="card__content">
+                    <span>
+                        <p class="card__title">Le délice des sens</p>
+                        <p class="card__subtitle">Folie-Méricourt</p>
+                    </span>
+                    <i class="far fa-heart fa-xl icone-weight"></i>
+                </div>
+            </article>
         </section>
     </main>
 
