--- a/index.html
+++ b/index.html
@@ -98,6 +98,17 @@
     </main>
 
     <footer>
+        <div class="footer">
+            <h4 class="footer__logo">ohmyfood</h4>
+            <nav>
+                <ul class="footer__ul">
+                    <li class="footer__li"><i class="fas fa-utensils fa-sm"></i>Proposer un restaurant</li>
+                    <li class="footer__li"><i class="fas fa-hands-helping fa-sm width-icone"></i>Devenir partenaire</li>
+                    <li>Mentions légales</li>
+                    <li>Contact</li>
+                </ul>
+            </nav>
+        </div>
     </footer>
 </body>
 </html>
