--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         <section class="restaurants">
             <h3 class="restaurants__title">Restaurants</h3>
             <article class="card">
+                <span class="card__new">
+                    <p class="card__position">Nouveau</p>
+                </span>
                 <img class="card__img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo d'une assiette d'un restaurant">
                 <div class="card__content">
                     <span>
@@ -65,6 +68,9 @@
                 </div>
             </article>
             <article class="card">
+                <span class="card__new">
+                    <p class="card__position">Nouveau</p>
+                </span>
                 <img class="card__img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo d'une assiette d'un restaurant">
                 <div class="card__content">
                     <span>
