--- a/index.html
+++ b/index.html
@@ -55,50 +55,58 @@
         <section class="restaurants">
             <h3 class="restaurants__title">Restaurants</h3>
             <article class="card">
-                <span class="card__new">
-                    <p class="card__position">Nouveau</p>
-                </span>
-                <img class="card__img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo d'une assiette d'un restaurant">
-                <div class="card__content">
-                    <span>
-                        <p class="card__title">La palette du goût</p>
-                        <p class="card__subtitle">Ménilmontant</p>
+                <a href="#" class="card__link">
+                    <span class="card__new">
+                        <p class="card__position">Nouveau</p>
                     </span>
-                    <i class="far fa-heart fa-xl icone-weight"></i>
-                </div>
+                    <img class="card__img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo d'une assiette d'un restaurant">
+                    <div class="card__content">
+                        <span>
+                            <p class="card__title">La palette du goût</p>
+                            <p class="card__subtitle">Ménilmontant</p>
+                        </span>
+                        <i class="far fa-heart fa-xl icone-weight"></i>
+                    </div>
+                </a>
             </article>
             <article class="card">
-                <span class="card__new">
-                    <p class="card__position">Nouveau</p>
-                </span>
-                <img class="card__img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo d'une assiette d'un restaurant">
-                <div class="card__content">
-                    <span>
-                        <p class="card__title">La note enchantée</p>
-                        <p class="card__subtitle">Charonne</p>
+                <a href="#" class="card__link">
+                    <span class="card__new">
+                        <p class="card__position">Nouveau</p>
                     </span>
-                    <i class="far fa-heart fa-xl icone-weight"></i>
-                </div>
+                    <img class="card__img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo d'une assiette d'un restaurant">
+                    <div class="card__content">
+                        <span>
+                            <p class="card__title">La note enchantée</p>
+                            <p class="card__subtitle">Charonne</p>
+                        </span>
+                        <i class="far fa-heart fa-xl icone-weight"></i>
+                    </div>
+                </a>
             </article>
             <article class="card">
-                <img class="card__img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'une assiette d'un restaurant">
-                <div class="card__content">
-                    <span>
-                        <p class="card__title">À la française</p>
-                        <p class="card__subtitle">Cité Rouge</p>
-                    </span>
-                    <i class="far fa-heart fa-xl icone-weight"></i>
-                </div>
+                <a href="#" class="card__link">
+                    <img class="card__img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'une assiette d'un restaurant">
+                    <div class="card__content">
+                        <span>
+                            <p class="card__title">À la française</p>
+                            <p class="card__subtitle">Cité Rouge</p>
+                        </span>
+                        <i class="far fa-heart fa-xl icone-weight"></i>
+                    </div>
+                </a>
             </article>
             <article class="card">
-                <img class="card__img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo d'une assiette d'un restaurant">
-                <div class="card__content">
-                    <span>
-                        <p class="card__title">Le délice des sens</p>
-                        <p class="card__subtitle">Folie-Méricourt</p>
-                    </span>
-                    <i class="far fa-heart fa-xl icone-weight"></i>
-                </div>
+                <a href="#" class="card__link">
+                    <img class="card__img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo d'une assiette d'un restaurant">
+                    <div class="card__content">
+                        <span>
+                            <p class="card__title">Le délice des sens</p>
+                            <p class="card__subtitle">Folie-Méricourt</p>
+                        </span>
+                        <i class="far fa-heart fa-xl icone-weight"></i>
+                    </div>
+                </a>
             </article>
         </section>
     </main>
