complétion base page menu

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section class="restaurants">
             <h3 class="restaurants__title">Restaurants</h3>
             <article class="card">
-                <a href="#" class="card__link">
+                <a href="menu.html" class="card__link">
                     <span class="card__new">
                         <p class="card__position">Nouveau</p>
                     </span>
