Ajout des menus

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section class="restaurants">
             <h3 class="restaurants__title">Restaurants</h3>
             <article class="card">
-                <a href="menu.html" class="card__link">
+                <a href="menu-palette-du-gout.html" class="card__link">
                     <span class="card__new">
                         <p class="card__position">Nouveau</p>
                     </span>
@@ -70,7 +70,7 @@
                 </a>
             </article>
             <article class="card">
-                <a href="#" class="card__link">
+                <a href="menu-la-note-enchantée.html" class="card__link">
                     <span class="card__new">
                         <p class="card__position">Nouveau</p>
                     </span>
@@ -85,7 +85,7 @@
                 </a>
             </article>
             <article class="card">
-                <a href="#" class="card__link">
+                <a href="menu-a-la-francaise.html" class="card__link">
                     <img class="card__img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'une assiette d'un restaurant">
                     <div class="card__content">
                         <span>
@@ -97,7 +97,7 @@
                 </a>
             </article>
             <article class="card">
-                <a href="#" class="card__link">
+                <a href="menu-delice-des-sens.html" class="card__link">
                     <img class="card__img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo d'une assiette d'un restaurant">
                     <div class="card__content">
                         <span>
