animation coeur et confirmation menu

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h1 class="reservation__title">Réservez le menu qui vous convient</h1>
             <span class="reservation__subtitle">Découvrez des restaurants d'exception, sélectionnés par nos soins.</span>
             <div class="btn-center">
-                <a href="#" class="btn-reservation btn-gradient btn-font btn-rounded">Explorer nos restaurants</a>
+                <a href="#restaurants" class="btn-reservation btn-font btn-rounded">Explorer nos restaurants</a>
             </div>
         </section>
         
@@ -52,7 +52,7 @@
                 <span>Dégustez au restaurant</span>
             </div>
         </section>
-        <section class="restaurants">
+        <section class="restaurants" id="restaurants">
             <h3 class="restaurants__title">Restaurants</h3>
             <article class="card">
                 <a href="menu-palette-du-gout.html" class="card__link">
@@ -65,7 +65,11 @@
                             <p class="card__title">La palette du goût</p>
                             <p class="card__subtitle">Ménilmontant</p>
                         </span>
-                        <i class="far fa-heart fa-xl icone-weight"></i>
+                        <label class="heart-container">
+                            <input type="checkbox" class="heart-checkbox">
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-heart"></i>
+                        </label>
                     </div>
                 </a>
             </article>
@@ -80,7 +84,11 @@
                             <p class="card__title">La note enchantée</p>
                             <p class="card__subtitle">Charonne</p>
                         </span>
-                        <i class="far fa-heart fa-xl icone-weight"></i>
+                        <label class="heart-container">
+                            <input type="checkbox" class="heart-checkbox" />
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-heart"></i>
+                        </label>
                     </div>
                 </a>
             </article>
@@ -92,7 +100,11 @@
                             <p class="card__title">À la française</p>
                             <p class="card__subtitle">Cité Rouge</p>
                         </span>
-                        <i class="far fa-heart fa-xl icone-weight"></i>
+                        <label class="heart-container">
+                            <input type="checkbox" class="heart-checkbox" />
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-heart"></i>
+                        </label>
                     </div>
                 </a>
             </article>
@@ -104,7 +116,11 @@
                             <p class="card__title">Le délice des sens</p>
                             <p class="card__subtitle">Folie-Méricourt</p>
                         </span>
-                        <i class="far fa-heart fa-xl icone-weight"></i>
+                        <label class="heart-container">
+                            <input type="checkbox" class="heart-checkbox" />
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-heart"></i>
+                        </label>
                     </div>
                 </a>
             </article>
