--- a/menu-delice-des-sens.html
+++ b/menu-delice-des-sens.html
@@ -22,12 +22,6 @@
                 <i class="fas fa-arrow-left fa-lg"></i>
             </a>
         </div>
-        <div class="header__box-location display-none">
-            <span class="location--flex">
-                <i class="fas fa-map-marker-alt"></i>
-                Paris, Belleville
-            </span>
-        </div>
     </header>
 
     <main>
@@ -46,6 +40,10 @@
                             <p class="menu__card__subtitle">Assaisonné au yuzu</p>
                         </span>
                         <span class="menu__card__price">25€</span>
+                        <span class="checkbox-container">
+                            <input type="checkbox" class="menu-checkbox">
+                            <i class="fas fa-check"></i>
+                        </span>
                     </div>
                     <div class="menu__card">
                         <span class="menu__card__content">
@@ -53,6 +51,10 @@
                             <p class="menu__card__subtitle">Et sa farandole de petits légumes</p>
                         </span>
                         <span class="menu__card__price">35€</span>
+                        <span class="checkbox-container">
+                            <input type="checkbox" class="menu-checkbox">
+                            <i class="fas fa-check"></i>
+                        </span>
                     </div>
                     <div class="menu__card">
                         <span class="menu__card__content">
@@ -60,6 +62,10 @@
                             <p class="menu__card__subtitle">Et sa crème de truffe</p>
                         </span>
                         <span class="menu__card__price">40€</span>
+                        <span class="checkbox-container">
+                            <input type="checkbox" class="menu-checkbox">
+                            <i class="fas fa-check"></i>
+                        </span>
                     </div>
                 </article>
 
@@ -71,6 +77,10 @@
                             <p class="menu__card__subtitle">Et sa crème de truffe</p>
                         </span>
                         <span class="menu__card__price">40€</span>
+                        <span class="checkbox-container">
+                            <input type="checkbox" class="menu-checkbox">
+                            <i class="fas fa-check"></i>
+                        </span>
                     </div>
                     <div class="menu__card">
                         <span class="menu__card__content">
@@ -78,6 +88,10 @@
                             <p class="menu__card__subtitle">Et ses légumes de saison</p>
                         </span>
                         <span class="menu__card__price">35€</span>
+                        <span class="checkbox-container">
+                            <input type="checkbox" class="menu-checkbox">
+                            <i class="fas fa-check"></i>
+                        </span>
                     </div>
                     <div class="menu__card">
                         <span class="menu__card__content">
@@ -85,6 +99,10 @@
                             <p class="menu__card__subtitle">Et sa purée de panais</p>
                         </span>
                         <span class="menu__card__price">44€</span>
+                        <span class="checkbox-container">
+                            <input type="checkbox" class="menu-checkbox">
+                            <i class="fas fa-check"></i>
+                        </span>
                     </div>
                 </article>
 
@@ -96,6 +114,10 @@
                             <p class="menu__card__subtitle">Du chef</p>
                         </span>
                         <span class="menu__card__price">18€</span>
+                        <span class="checkbox-container">
+                            <input type="checkbox" class="menu-checkbox">
+                            <i class="fas fa-check"></i>
+                        </span>
                     </div>
                     <div class="menu__card">
                         <span class="menu__card__content">
@@ -103,6 +125,10 @@
                             <p class="menu__card__subtitle">Revisitée</p>
                         </span>
                         <span class="menu__card__price">22€</span>
+                        <span class="checkbox-container">
+                            <input type="checkbox" class="menu-checkbox">
+                            <i class="fas fa-check"></i>
+                        </span>
                     </div>
                     <div class="menu__card">
                         <span class="menu__card__content">
@@ -110,6 +136,10 @@
                             <p class="menu__card__subtitle">À la noisette</p>
                         </span>
                         <span class="menu__card__price">23€</span>
+                        <span class="checkbox-container">
+                            <input type="checkbox" class="menu-checkbox">
+                            <i class="fas fa-check"></i>
+                        </span>
                     </div>
                 </article>
                 <div class="btn-center">
