--- a/menu-la-note-enchantée.html
+++ b/menu-la-note-enchantée.html
@@ -22,12 +22,6 @@
                 <i class="fas fa-arrow-left fa-lg"></i>
             </a>
         </div>
-        <div class="header__box-location display-none">
-            <span class="location--flex">
-                <i class="fas fa-map-marker-alt"></i>
-                Paris, Belleville
-            </span>
-        </div>
     </header>
 
     <main>
@@ -46,6 +40,10 @@
                             <p class="menu__card__subtitle">Accompagnées de leur crème à la truffe</p>
                         </span>
                         <span class="menu__card__price">25€</span>
+                        <span class="checkbox-container">
+                            <input type="checkbox" class="menu-checkbox">
+                            <i class="fas fa-check"></i>
+                        </span>
                     </div>
                     <div class="menu__card">
                         <span class="menu__card__content">
@@ -53,6 +51,10 @@
                             <p class="menu__card__subtitle">Sur blini à la farine de blé noir</p>
                         </span>
                         <span class="menu__card__price">35€</span>
+                        <span class="checkbox-container">
+                            <input type="checkbox" class="menu-checkbox">
+                            <i class="fas fa-check"></i>
+                        </span>
                     </div>
                     <div class="menu__card">
                         <span class="menu__card__content">
@@ -60,6 +62,10 @@
                             <p class="menu__card__subtitle">Marinés aux zestes d'orange</p>
                         </span>
                         <span class="menu__card__price">20€</span>
+                        <span class="checkbox-container">
+                            <input type="checkbox" class="menu-checkbox">
+                            <i class="fas fa-check"></i>
+                        </span>
                     </div>
                     <div class="menu__card">
                         <span class="menu__card__content">
@@ -67,6 +73,10 @@
                             <p class="menu__card__subtitle">Confiture de figue et pain toasté</p>
                         </span>
                         <span class="menu__card__price">35€</span>
+                        <span class="checkbox-container">
+                            <input type="checkbox" class="menu-checkbox">
+                            <i class="fas fa-check"></i>
+                        </span>
                     </div>
                 </article>
 
@@ -78,6 +88,10 @@
                             <p class="menu__card__subtitle">Sur lit de purée de céleri-rave</p>
                         </span>
                         <span class="menu__card__price">40€</span>
+                        <span class="checkbox-container">
+                            <input type="checkbox" class="menu-checkbox">
+                            <i class="fas fa-check"></i>
+                        </span>
                     </div>
                     <div class="menu__card">
                         <span class="menu__card__content">
@@ -85,6 +99,10 @@
                             <p class="menu__card__subtitle">Purée de patate douce</p>
                         </span>
                         <span class="menu__card__price">35€</span>
+                        <span class="checkbox-container">
+                            <input type="checkbox" class="menu-checkbox">
+                            <i class="fas fa-check"></i>
+                        </span>
                     </div>
                     <div class="menu__card">
                         <span class="menu__card__content">
@@ -92,6 +110,10 @@
                             <p class="menu__card__subtitle">Et riz sauvage aux zetes de citron</p>
                         </span>
                         <span class="menu__card__price">45€</span>
+                        <span class="checkbox-container">
+                            <input type="checkbox" class="menu-checkbox">
+                            <i class="fas fa-check"></i>
+                        </span>
                     </div>
                 </article>
 
@@ -103,6 +125,10 @@
                             <p class="menu__card__subtitle">Glace au caramel brun et sel de Guérande</p>
                         </span>
                         <span class="menu__card__price">18€</span>
+                        <span class="checkbox-container">
+                            <input type="checkbox" class="menu-checkbox">
+                            <i class="fas fa-check"></i>
+                        </span>
                     </div>
                     <div class="menu__card">
                         <span class="menu__card__content">
@@ -110,6 +136,10 @@
                             <p class="menu__card__subtitle">Avec son coulis de citron</p>
                         </span>
                         <span class="menu__card__price">22€</span>
+                        <span class="checkbox-container">
+                            <input type="checkbox" class="menu-checkbox">
+                            <i class="fas fa-check"></i>
+                        </span>
                     </div>
                     <div class="menu__card">
                         <span class="menu__card__content">
@@ -117,6 +147,10 @@
                             <p class="menu__card__subtitle">Déstructurée</p>
                         </span>
                         <span class="menu__card__price">23€</span>
+                        <span class="checkbox-container">
+                            <input type="checkbox" class="menu-checkbox">
+                            <i class="fas fa-check"></i>
+                        </span>
                     </div>
                 </article>
                 <div class="btn-center">
