réglage animations cards

--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -30,116 +30,138 @@
             <div class="base-menu">
                 <h1 class="base-menu__restaurant">
                     À la française
-                    <i class="far fa-heart icone-weight"></i>
+                    <label class="heart-container">
+                        <input type="checkbox" class="heart-checkbox">
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
+                    </label>
                 </h1>
                 <article class="menu">
                     <h2 class="menu__title">ENTRÉES</h2>
                     <div class="menu__card">
-                        <span class="menu__card__content">
-                            <p class="menu__card__title">Tartare de poulpe acidulé</p>
-                            <p class="menu__card__subtitle">Aux zestes d'orange</p>
-                        </span>
+                        <input type="checkbox" class="menu-checkbox" id="checkbox-1">
+                        <label for="checkbox-1" class="menu__card__content">
+                            <span class="menu__card__content">
+                                <p class="menu__card__title">Tartare de poulpe acidulé</p>
+                                <p class="menu__card__subtitle">Aux zestes d'orange</p>
+                            </span>
+                        </label>
                         <span class="menu__card__price">25€</span>
-                        <span class="checkbox-container">
-                            <input type="checkbox" class="menu-checkbox">
+                        <label for="checkbox-1" class="checkbox-container">
                             <i class="fas fa-check"></i>
-                        </span>
+                        </label>
                     </div>
                     <div class="menu__card">
-                        <span class="menu__card__content">
-                            <p class="menu__card__title">Velouté du légumes d'antan</p>
-                            <p class="menu__card__subtitle">Carotte, panais, topinambour</p>
-                        </span>
+                        <input type="checkbox" class="menu-checkbox" id="checkbox-2">
+                        <label for="checkbox-2" class="menu__card__content">
+                            <span class="menu__card__content">
+                                <p class="menu__card__title">Velouté de légumes d'antan</p>
+                                <p class="menu__card__subtitle">Carotte, panais, topimanbour</p>
+                            </span>
+                        </label>
                         <span class="menu__card__price">35€</span>
-                        <span class="checkbox-container">
-                            <input type="checkbox" class="menu-checkbox">
+                        <label for="checkbox-2" class="checkbox-container">
                             <i class="fas fa-check"></i>
-                        </span>
+                        </label>
                     </div>
                     <div class="menu__card">
-                        <span class="menu__card__content">
-                            <p class="menu__card__title">Soupe à l'oignon</p>
-                            <p class="menu__card__subtitle">Revisitée</p>
-                        </span>
+                        <input type="checkbox" class="menu-checkbox" id="checkbox-3">
+                        <label for="checkbox-3" class="menu__card__content">
+                            <span class="menu__card__content">
+                                <p class="menu__card__title">Soupe à l'oignon</p>
+                                <p class="menu__card__subtitle">Revisitée</p>
+                            </span>
+                        </label>
                         <span class="menu__card__price">20€</span>
-                        <span class="checkbox-container">
-                            <input type="checkbox" class="menu-checkbox">
+                        <label for="checkbox-3" class="checkbox-container">
                             <i class="fas fa-check"></i>
-                        </span>
+                        </label>
                     </div>
                 </article>
 
                 <article class="menu">
                     <h2 class="menu__title">PLATS</h2>
                     <div class="menu__card">
-                        <span class="menu__card__content">
-                            <p class="menu__card__title">Coquilles Saint-Jacques</p>
-                            <p class="menu__card__subtitle">Accompagnées d'une purée de panais</p>
-                        </span>
+                        <input type="checkbox" class="menu-checkbox" id="checkbox-4">
+                        <label for="checkbox-4" class="menu__card__content">
+                            <span class="menu__card__content">
+                                <p class="menu__card__title">Coquilles Saint-Jacques</p>
+                                <p class="menu__card__subtitle">Accompagnées d'une purée de panais</p>
+                            </span>
+                        </label>
                         <span class="menu__card__price">40€</span>
-                        <span class="checkbox-container">
-                            <input type="checkbox" class="menu-checkbox">
+                        <label for="checkbox-4" class="checkbox-container">
                             <i class="fas fa-check"></i>
-                        </span>
+                        </label>
                     </div>
                     <div class="menu__card">
-                        <span class="menu__card__content">
-                            <p class="menu__card__title">Magret de canard</p>
-                            <p class="menu__card__subtitle">Et parmentier de pommes de terre</p>
-                        </span>
+                        <input type="checkbox" class="menu-checkbox" id="checkbox-5">
+                        <label for="checkbox-5" class="menu__card__content">
+                            <span class="menu__card__content">
+                                <p class="menu__card__title">Magret de canard</p>
+                                <p class="menu__card__subtitle">Et parmentier de pommes de terre</p>
+                            </span>
+                        </label>
                         <span class="menu__card__price">35€</span>
-                        <span class="checkbox-container">
-                            <input type="checkbox" class="menu-checkbox">
+                        <label for="checkbox-5" class="checkbox-container">
                             <i class="fas fa-check"></i>
-                        </span>
+                        </label>
                     </div>
                     <div class="menu__card">
-                        <span class="menu__card__content">
-                            <p class="menu__card__title">Pigeonneau d'Ille-et-Vilaine</p>
-                            <p class="menu__card__subtitle">Sur son lit de gnocchis aux légumes</p>
-                        </span>
+                        <input type="checkbox" class="menu-checkbox" id="checkbox-6">
+                        <label for="checkbox-6" class="menu__card__content">
+                            <span class="menu__card__content">
+                                <p class="menu__card__title">Pigeonneau d'Ille-et-Vilaine</p>
+                                <p class="menu__card__subtitle">Sur son lit de gnocchis aux légumes</p>
+                            </span>
+                        </label>
                         <span class="menu__card__price">44€</span>
-                        <span class="checkbox-container">
-                            <input type="checkbox" class="menu-checkbox">
+                        <label for="checkbox-6" class="checkbox-container">
                             <i class="fas fa-check"></i>
-                        </span>
+                        </label>
                     </div>
                 </article>
 
                 <article class="menu">
                     <h2 class="menu__title">DESSERTS</h2>
                     <div class="menu__card">
-                        <span class="menu__card__content">
-                            <p class="menu__card__title">Pétales de violettes glacés</p>
-                            <p class="menu__card__subtitle">Et purée du noisettes</p>
-                        </span>
+                        <input type="checkbox" class="menu-checkbox" id="checkbox-7">
+                        <label for="checkbox-7" class="menu__card__content">
+                            <span class="menu__card__content">
+                                <p class="menu__card__title">Pétales de violettes glacés</p>
+                                <p class="menu__card__subtitle">Et purée de noisettes</p>
+                            </span>
+                        </label>
                         <span class="menu__card__price">18€</span>
-                        <span class="checkbox-container">
-                            <input type="checkbox" class="menu-checkbox">
+                        <label for="checkbox-7" class="checkbox-container">
                             <i class="fas fa-check"></i>
-                        </span>
+                        </label>
                     </div>
                     <div class="menu__card">
-                        <span class="menu__card__content">
-                            <p class="menu__card__title">Fondant au chocolat</p>
-                            <p class="menu__card__subtitle">Revisité</p>
-                        </span>
+                        <input type="checkbox" class="menu-checkbox" id="checkbox-8">
+                        <label for="checkbox-8" class="menu__card__content">
+                            <span class="menu__card__content">
+                                <p class="menu__card__title">Fondant au chocolat</p>
+                                <p class="menu__card__subtitle">Revisité</p>
+                            </span>
+                        </label>
                         <span class="menu__card__price">22€</span>
-                        <span class="checkbox-container">
-                            <input type="checkbox" class="menu-checkbox">
+                        <label for="checkbox-8" class="checkbox-container">
                             <i class="fas fa-check"></i>
-                        </span>
+                        </label>
                     </div>
                     <div class="menu__card">
-                        <span class="menu__card__content">
-                            <p class="menu__card__title">Millefeuille croustillant</p>
-                            <p class="menu__card__subtitle">Myrtilles et pâte d'amande</p>
-                        </span>
+                        <input type="checkbox" class="menu-checkbox" id="checkbox-9">
+                        <label for="checkbox-9" class="menu__card__content">
+                            <span class="menu__card__content">
+                                <p class="menu__card__title">Millefeuille croustillant</p>
+                                <p class="menu__card__subtitle">Myrtilles et pâte d'amande</p>
+                            </span>
+                        </label>
                         <span class="menu__card__price">23€</span>
-                        <span class="checkbox-container">
-                            <input type="checkbox" class="menu-checkbox">
+                        <label for="checkbox-9" class="checkbox-container">
                             <i class="fas fa-check"></i>
-                        </span>
+                        </label>
                     </div>
                 </article>
                 <div class="btn-center">
