--- a/menu-la-note-enchantée.html
+++ b/menu-la-note-enchantée.html
@@ -30,127 +30,151 @@
             <div class="base-menu">
                 <h1 class="base-menu__restaurant">
                     La note enchantée
-                    <i class="far fa-heart icone-weight"></i>
+                    <label class="heart-container">
+                        <input type="checkbox" class="heart-checkbox">
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
+                    </label>
                 </h1>
                 <article class="menu">
                     <h2 class="menu__title">ENTRÉES</h2>
                     <div class="menu__card">
-                        <span class="menu__card__content">
-                            <p class="menu__card__title">Ravioles de foie gras</p>
-                            <p class="menu__card__subtitle">Accompagnées de leur crème à la truffe</p>
-                        </span>
+                        <input type="checkbox" class="menu-checkbox" id="checkbox-1">
+                        <label for="checkbox-1" class="menu__card__content">
+                            <span class="menu__card__content">
+                                <p class="menu__card__title">Ravioles de foie gras</p>
+                                <p class="menu__card__subtitle">Accompagnées de leur crème à la truffe</p>
+                            </span>
+                        </label>
                         <span class="menu__card__price">25€</span>
-                        <span class="checkbox-container">
-                            <input type="checkbox" class="menu-checkbox">
+                        <label for="checkbox-1" class="checkbox-container">
                             <i class="fas fa-check"></i>
-                        </span>
+                        </label>
                     </div>
                     <div class="menu__card">
-                        <span class="menu__card__content">
-                            <p class="menu__card__title">Caviar osciètre</p>
-                            <p class="menu__card__subtitle">Sur blini à la farine de blé noir</p>
-                        </span>
+                        <input type="checkbox" class="menu-checkbox" id="checkbox-2">
+                        <label for="checkbox-2" class="menu__card__content">
+                            <span class="menu__card__content">
+                                <p class="menu__card__title">Caviar osciètre</p>
+                                <p class="menu__card__subtitle">Sur blini à la farine de blé noir</p>
+                            </span>
+                        </label>
                         <span class="menu__card__price">35€</span>
-                        <span class="checkbox-container">
-                            <input type="checkbox" class="menu-checkbox">
+                        <label for="checkbox-2" class="checkbox-container">
                             <i class="fas fa-check"></i>
-                        </span>
+                        </label>
                     </div>
                     <div class="menu__card">
-                        <span class="menu__card__content">
-                            <p class="menu__card__title">Homard et espuma de potiron</p>
-                            <p class="menu__card__subtitle">Marinés aux zestes d'orange</p>
-                        </span>
+                        <input type="checkbox" class="menu-checkbox" id="checkbox-3">
+                        <label for="checkbox-3" class="menu__card__content">
+                            <span class="menu__card__content">
+                                <p class="menu__card__title">Homard et espuma de potiron</p>
+                                <p class="menu__card__subtitle">Marinés aux zestes d'orange</p>
+                            </span>
+                        </label>
                         <span class="menu__card__price">20€</span>
-                        <span class="checkbox-container">
-                            <input type="checkbox" class="menu-checkbox">
+                        <label for="checkbox-3" class="checkbox-container">
                             <i class="fas fa-check"></i>
-                        </span>
+                        </label>
                     </div>
                     <div class="menu__card">
-                        <span class="menu__card__content">
-                            <p class="menu__card__title">Foie gras de canard cuit entier</p>
-                            <p class="menu__card__subtitle">Confiture de figue et pain toasté</p>
-                        </span>
+                        <input type="checkbox" class="menu-checkbox" id="checkbox-4">
+                        <label for="checkbox-4" class="menu__card__content">
+                            <span class="menu__card__content">
+                                <p class="menu__card__title">Foie gras de canard cuit entier</p>
+                                <p class="menu__card__subtitle">Confiture de figue et pain toasté</p>
+                            </span>
+                        </label>
                         <span class="menu__card__price">35€</span>
-                        <span class="checkbox-container">
-                            <input type="checkbox" class="menu-checkbox">
+                        <label for="checkbox-4" class="checkbox-container">
                             <i class="fas fa-check"></i>
-                        </span>
+                        </label>
                     </div>
                 </article>
 
                 <article class="menu">
                     <h2 class="menu__title">PLATS</h2>
                     <div class="menu__card">
-                        <span class="menu__card__content">
-                            <p class="menu__card__title">Noix de coquilles Saint-Jacques</p>
-                            <p class="menu__card__subtitle">Sur lit de purée de céleri-rave</p>
-                        </span>
+                        <input type="checkbox" class="menu-checkbox" id="checkbox-5">
+                        <label for="checkbox-5" class="menu__card__content">
+                            <span class="menu__card__content">
+                                <p class="menu__card__title">Noix de coquilles Saint-Jacques</p>
+                                <p class="menu__card__subtitle">Sur lit de purée de céleri-rave</p>
+                            </span>
+                        </label>
                         <span class="menu__card__price">40€</span>
-                        <span class="checkbox-container">
-                            <input type="checkbox" class="menu-checkbox">
+                        <label for="checkbox-5" class="checkbox-container">
                             <i class="fas fa-check"></i>
-                        </span>
+                        </label>
                     </div>
                     <div class="menu__card">
-                        <span class="menu__card__content">
-                            <p class="menu__card__title">Langoustine poêlée</p>
-                            <p class="menu__card__subtitle">Purée de patate douce</p>
-                        </span>
+                        <input type="checkbox" class="menu-checkbox" id="checkbox-6">
+                        <label for="checkbox-6" class="menu__card__content">
+                            <span class="menu__card__content">
+                                <p class="menu__card__title">Langoustine poêlée</p>
+                                <p class="menu__card__subtitle">Purée de patate douce</p>
+                            </span>
+                        </label>
                         <span class="menu__card__price">35€</span>
-                        <span class="checkbox-container">
-                            <input type="checkbox" class="menu-checkbox">
+                        <label for="checkbox-6" class="checkbox-container">
                             <i class="fas fa-check"></i>
-                        </span>
+                        </label>
                     </div>
                     <div class="menu__card">
-                        <span class="menu__card__content">
-                            <p class="menu__card__title">Mijoté de queue de bœuf</p>
-                            <p class="menu__card__subtitle">Et riz sauvage aux zetes de citron</p>
-                        </span>
+                        <input type="checkbox" class="menu-checkbox" id="checkbox-7">
+                        <label for="checkbox-7" class="menu__card__content">
+                            <span class="menu__card__content">
+                                <p class="menu__card__title">Mijoté de queue de boeuf</p>
+                                <p class="menu__card__subtitle">Et riz sauvage aux zestes de citron</p>
+                            </span>
+                        </label>
                         <span class="menu__card__price">45€</span>
-                        <span class="checkbox-container">
-                            <input type="checkbox" class="menu-checkbox">
+                        <label for="checkbox-7" class="checkbox-container">
                             <i class="fas fa-check"></i>
-                        </span>
+                        </label>
                     </div>
                 </article>
 
                 <article class="menu">
                     <h2 class="menu__title">DESSERTS</h2>
                     <div class="menu__card">
-                        <span class="menu__card__content">
-                            <p class="menu__card__title">Macaron noisette et chocolat</p>
-                            <p class="menu__card__subtitle">Glace au caramel brun et sel de Guérande</p>
-                        </span>
+                        <input type="checkbox" class="menu-checkbox" id="checkbox-8">
+                        <label for="checkbox-8" class="menu__card__content">
+                            <span class="menu__card__content">
+                                <p class="menu__card__title">Macaron noisette et chocolat</p>
+                                <p class="menu__card__subtitle">Glace au caramel brun et sel de Guérande</p>
+                            </span>
+                        </label>
                         <span class="menu__card__price">18€</span>
-                        <span class="checkbox-container">
-                            <input type="checkbox" class="menu-checkbox">
+                        <label for="checkbox-8" class="checkbox-container">
                             <i class="fas fa-check"></i>
-                        </span>
+                        </label>
                     </div>
                     <div class="menu__card">
-                        <span class="menu__card__content">
-                            <p class="menu__card__title">Baba au rhum revisité</p>
-                            <p class="menu__card__subtitle">Avec son coulis de citron</p>
-                        </span>
+                        <input type="checkbox" class="menu-checkbox" id="checkbox-9">
+                        <label for="checkbox-9" class="menu__card__content">
+                            <span class="menu__card__content">
+                                <p class="menu__card__title">Baba au rhum revisité</p>
+                                <p class="menu__card__subtitle">Avec son coulis de citron</p>
+                            </span>
+                        </label>
                         <span class="menu__card__price">22€</span>
-                        <span class="checkbox-container">
-                            <input type="checkbox" class="menu-checkbox">
+                        <label for="checkbox-9" class="checkbox-container">
                             <i class="fas fa-check"></i>
-                        </span>
+                        </label>
                     </div>
                     <div class="menu__card">
-                        <span class="menu__card__content">
-                            <p class="menu__card__title">Tarte au citron meringuée</p>
-                            <p class="menu__card__subtitle">Déstructurée</p>
-                        </span>
+                        <input type="checkbox" class="menu-checkbox" id="checkbox-10">
+                        <label for="checkbox-10" class="menu__card__content">
+                            <span class="menu__card__content">
+                                <p class="menu__card__title">Tarte au citron meringuée</p>
+                                <p class="menu__card__subtitle">Déstructurée</p>
+                            </span>
+                        </label>
                         <span class="menu__card__price">23€</span>
-                        <span class="checkbox-container">
-                            <input type="checkbox" class="menu-checkbox">
+                        <label for="checkbox-10" class="checkbox-container">
                             <i class="fas fa-check"></i>
-                        </span>
+                        </label>
                     </div>
                 </article>
                 <div class="btn-center">
